# application_tracker

./: .gitignore  Makefile  README.md  docker-compose.yml  package-lock.json  package.json
backend/: alembic.ini  conftest.py  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_schema.py  0002_add_auth_rate_limit_events.py
backend/scripts/: run_backend_tests.py
backend/services/api-gateway/: Dockerfile
backend/services/api-gateway/app/: __init__.py
backend/services/api-gateway/app/routes/: __init__.py  gateway.py
backend/services/api-gateway/tests/: test_health.py
backend/services/application-service/: Dockerfile
backend/services/application-service/app/: __init__.py  store.py
backend/services/application-service/tests/: conftest.py  test_applications.py
backend/services/backend/: Dockerfile  entrypoint.sh  wsgi.py
backend/services/backend/app/: __init__.py  db_helpers.py  models.py  ownership.py  rate_limit.py  serializers.py  state.py
backend/services/backend/tests/: conftest.py  test_backend.py
backend/services/identity-service/: Dockerfile
backend/services/identity-service/app/: __init__.py
backend/services/identity-service/tests/: conftest.py  test_auth.py
backend/services/notification-service/: Dockerfile
backend/services/notification-service/app/: __init__.py
backend/services/notification-service/tests/: conftest.py  test_notifications.py
backend/shared/python/job_tracker_shared/: __init__.py  auth.py  config.py  db.py  http.py  logging.py  responses.py
docs/: architecture.md  operations.md
(+67 files in other folders)
