[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "job-application-tracker-backend"
version = "0.1.0"
description = "Shared backend package for the job application tracker microservices."
requires-python = ">=3.10"
dependencies = [
  "Flask>=3.0,<4.0",
  "flask-cors>=4.0,<5.0",
  "pydantic>=2.7,<3.0",
  "python-dotenv>=1.0,<2.0",
  "gunicorn>=22.0,<23.0"
]

[tool.setuptools]
package-dir = {"" = "shared/python"}

[tool.setuptools.packages.find]
where = ["shared/python"]

