[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "job-application-tracker-backend"
version = "0.1.0"
description = "Backend package for the job application tracker."
requires-python = ">=3.10"
dependencies = [
  "Flask>=3.0,<4.0",
  "flask-cors>=4.0,<5.0",
  "PyJWT>=2.10,<3.0",
  "SQLAlchemy>=2.0,<3.0",
  "alembic>=1.14,<2.0",
  "psycopg[binary]>=3.2,<4.0",
  "pydantic>=2.7,<3.0",
  "python-dotenv>=1.0,<2.0",
  "gunicorn>=22.0,<23.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0,<9.0"
]

[tool.setuptools]
package-dir = {"" = "shared/python"}

[tool.setuptools.packages.find]
where = ["shared/python"]
